--- a/codeshare/ChiPy2_1.html
+++ b/codeshare/ChiPy2_1.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>simple_salesforce demo</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>simple_salesforce demo</title>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -11787,4 +11789,15 @@ div#notebook {
                   <span class="n">password</span><span class="o">=</span><span class="n">sf_creds</span><span class="p">[</span><span class="s1">&#39;password&#39;</span><span class="p">],</span>
                   <span class="n">username</span><span class="o">=</span><span class="n">sf_creds</span><span class="p">[</span><span class="s1">&#39;username&#39;</span><span class="p">],</span>
                   <span class="n">security_token</span><span class="o">=</span><span class="n">sf_creds</span><span class="p">[</span><span class="s1">&#39;security_token&#39;</span><span class="p">])</span>
-</pre></div>
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+    </div>
+  </div>
+</body>
+</html>
