--- a/ChiPy2.html
+++ b/ChiPy2.html
@@ -21,6 +21,9 @@
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+
   </head>
 
   <body>
