--- a/ChiPy1.html
+++ b/ChiPy1.html
@@ -2,7 +2,14 @@
 <html lang="en">
 
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116548426-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-116548426-1');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -108,7 +115,7 @@
 </ul>
 
 <p>To comment on this post or my project, please reach out through the contact button at the top.</p>
- 
+
 	    <hr>
           </div>
         </div>
@@ -116,7 +123,7 @@
     </article>
 
     <!-- Footer -->
-    
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
