--- a/ChiPy3.html
+++ b/ChiPy3.html
@@ -14,8 +14,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ChiPy Mentorship Blog 3 of 3">
+    <meta name="author" content="Chris Luedtke">
+    <meta property="og:title" content="Bait and Switch" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:description" content="ChiPy Mentorship Blog 3 of 3" />
+    <meta property="og:image" content="img/cloudgate.jpg" />
 
     <title>Chris Luedtke's Blog</title>
     <style>
