--- a/ChiPy3.html
+++ b/ChiPy3.html
@@ -12,10 +12,11 @@
       gtag('config', 'UA-116548426-1');
     </script>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="ChiPy Mentorship Blog 3 of 3">
-    <meta name="author" content="Chris Luedtke">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content="Bait and Switch"/>
+    <meta name="description" content="ChiPy Mentorship Blog 3 of 3"/>
+    <meta name="author" content="Chris Luedtke"/>
     <meta property="og:title" content="Bait and Switch" />
     <meta property="og:type" content="blog" />
     <meta property="og:description" content="ChiPy Mentorship Blog 3 of 3" />
