better meta tags

--- a/ChiPy1.html
+++ b/ChiPy1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116548426-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -10,12 +11,18 @@
 
       gtag('config', 'UA-116548426-1');
     </script>
+
+    <!-- meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ChiPy Mentorship Blog 1 of 3">
+    <meta name="author" content="Chris Luedtke">
+    <meta property="og:title" content="Finding the Question" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:description" content="ChiPy Mentorship Blog 1 of 3" />
+    <meta property="og:image" content="img/chicago.jpg" />
 
-    <title>Chris Luedtke's Blog</title>
+    <title>Finding the Question: ChiPy Blog 1 of 3</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
