--- a/ChiPy2.html
+++ b/ChiPy2.html
@@ -12,12 +12,17 @@
       gtag('config', 'UA-116548426-1');
     </script>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- meta -->
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content="ChiPy Mentorship Blog 2 of 3"/>
+    <meta name="author" content="Chris Luedtke"/>
+    <meta property="og:title" content="Into the Weeds"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:description" content="ChiPy Mentorship Blog 2 of 3"/>
+    <meta property="og:image" content="img/wabash.jpg"/>
 
-    <title>Chris Luedtke's Blog</title>
+    <title>Into the Weeds: ChiPy Blog 2 of 3</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
