--- a/ChiPy3.html
+++ b/ChiPy3.html
@@ -12,9 +12,9 @@
       gtag('config', 'UA-116548426-1');
     </script>
 
+    <!-- meta -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="Bait and Switch"/>
     <meta name="description" content="ChiPy Mentorship Blog 3 of 3"/>
     <meta name="author" content="Chris Luedtke"/>
     <meta property="og:title" content="Bait and Switch" />
@@ -22,16 +22,17 @@
     <meta property="og:description" content="ChiPy Mentorship Blog 3 of 3" />
     <meta property="og:image" content="img/cloudgate.jpg" />
 
-    <title>Chris Luedtke's Blog</title>
+    <title>Bait and Switch: ChiPy Blog 3 of 3</title>
+
+    <!-- random CSS -->
     <style>
-
-
-    .center-fit {
-       max-width: 100%;
-       max-height: 100%;
-       margin: auto;
-    }
+      .center-fit {
+         max-width: 100%;
+         max-height: 100%;
+         margin: auto;
+      }
     </style>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
