better meta tags

--- a/teamcreation.html
+++ b/teamcreation.html
@@ -12,6 +12,7 @@
       gtag('config', 'UA-116548426-1');
     </script>
 
+    <!-- meta -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="title" content="Team Creation with Simulated Annealing"/>
@@ -20,9 +21,11 @@
     <meta property="og:title" content="Team Creation with Simulated Annealing"/>
     <meta property="og:type" content="blog" />
     <meta property="og:description" content="Solution for City Year AmeriCorps Members"/>
-    <meta property="og:image" content="img/cychicago.jpg"/>
+    <meta property="og:image" content="https://chrisluedtke.github.io/img/cychicago.jpg"/>
 
-    <title>Chris Luedtke's Blog</title>
+    <title>Team Creation with Simulated Annealing: Solution for City Year AmeriCorps Members</title>
+
+    <!-- random CSS -->
     <style>
     .center-fit {
        max-width: 100%;
