--- a/divvy-data.html
+++ b/divvy-data.html
@@ -79,7 +79,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/chipy_finale.jpg')">
+    <header class="masthead" style="background-image: url('img/divvy-data/cover.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
