--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Chris Luedtke</h1>
-              <span class="subheading">Continuous Learner · Data for Good</span>
+              <span class="subheading">Data scientist wielding data for more<br>equitable and sustainable systems</span>
             </div>
           </div>
         </div>
