--- a/divvy-data.html
+++ b/divvy-data.html
@@ -186,7 +186,7 @@
 
               <p><iframe width="100%" height="405" src="https://www.youtube.com/embed/SVueGQPpz14?modestbranding=1&loop=1&rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 
-              <p>Finally, here are two interactive frames from the animation. Click or tap the circles for more detail. Let me know if you discover something.<p>
+              <p>Finally, here are two interactive frames from the animation. Click or tap the circles for more detail. Let me know what you discover. (<a href="https://chrisluedtke.github.io/img/divvy-data/am_v_pm.html">full screen here</a>)<p>
 
               <table style="width:100%; text-align:center">
                 <tr>
